--- a/index.html
+++ b/index.html
@@ -50,3 +50,12 @@
             </div>
         </nav>
     </section>
+        <!--  וידאו   -->
+
+        <div class="video_main">
+            <video autoplay muted loop>
+                <source src="images/The Alps .mp4" type="video/mp4">
+            </video>
+            <h2>Canada </h2>
+        </div>
+    
