--- a/index.html
+++ b/index.html
@@ -58,4 +58,14 @@
             </video>
             <h2>Canada </h2>
         </div>
+        
+    <!-- כותרת  -->
+    <section class="card_travel">
+        <section class="travel-blog">
+            <div class="title-style text-center">
+                <h1>The most recommended tours </h1>
+            </div>
+        </section>
+    </section>
+
     
