--- a/index.html
+++ b/index.html
@@ -67,5 +67,115 @@
             </div>
         </section>
     </section>
+    
+    <!--  כרטיסיות הטיולים הכי מומלצים   -->
+
+    <section class="card_tours">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="card">
+                        <div class="face face1">
+                            <div class="content">
+                                <img src="images/canada-city-.png">
+                            </div>
+                        </div>
+
+                        <div class="face face2">
+                            <div class="content">
+                                <div class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-o"></i>
+
+                                </div>
+                                <div class="features-text">
+                                    <h4>toronto</h4>
+                                    <p>If you love art and history, spectacular views, breathtaking views, shopping,
+                                        and
+                                        restaurants, you might want to go on your next vacation to Toronto. Here are
+                                        some
+                                        recommendations for attractions in the Canadian city.</p>
+                                </div>
+                                <div>
+                                    <i class="fa fa-map-marker"></i><span>toronto,canada</span>
+                                    <button type="button" class="btn_book">book now</button>                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card">
+                        <div class="face face1">
+                            <div class="content">
+                                <img src="images/edward.jpg">
+                            </div>
+                        </div>
+
+                        <div class="face face2">
+                            <div class="content">
+                                <div class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+
+                                </div>
+                                <div class="features-text">
+                                    <h4>the rocky mountains</h4>
+                                    <p>If lakes, glaciers, and rising mountains are doing you good, you've come to
+                                        the right
+                                        place! the rocky mountains
+                                          It is Canada's westernmost province. The capital of rocky mountains is the
+                                        city of
+                                        alberta, which is on Vancouver Island.</p>
+                                </div>
+                                <div>
+                                    <i class="fa fa-map-marker"></i><span>alberta,canada</span>
+                                    <button type="button" class="btn_book ">book now</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card">
+                        <div class="face face1">
+                            <div class="content">
+                                <img src="images/niagara falls.jpg">
+                            </div>
+                        </div>
+
+                        <div class="face face2">
+                            <div class="content">
+                                <div class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star-half-empty"></i>
+                                </div>
+                                <div class="features-text">
+                                    <h4>niagara falls</h4>
+                                    <p>Niagara Falls, Canada,is a tourist attraction that attracts many visitors
+                                        thanks to the
+                                        enchanting natural wonders,waterfalls,52-meter-high water and the
+                                        extraordinary
+                                        energies that create. Eastern Canada is a feast </p>
+                                </div>
+                                <div>
+                                    <i class="fa fa-map-marker"></i><span>Ontario,canada</span>
+                                    <button type="button" class="btn_book">book now</button>                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </section>
+
 
     
