--- a/index.html
+++ b/index.html
@@ -177,5 +177,25 @@
     </section>
     </section>
 
+    <!-- ניוזלייטר  -->
+
+    <section class="Newsletter">
+        <div class="container_new">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="content">
+                        <h2>subscribe to our newsletter</h2>
+                        <div class="Newsletter-email">
+                            <input type="email" class="form-control" placeholder="Enter your Email">
+                            <span class="Newsletter-button">
+                                <button class="btn" type="submit">Subscribe</button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+
 
     
