--- a/index.html
+++ b/index.html
@@ -197,5 +197,93 @@
     </section>
 
 
+    <!-- כותרת  -->
+
+    <section class="travel-blog">
+        <div class="title-style text-center">
+            <h1>
+                More tours </h1>
+        </div>
+    </section>
+
+
+    <!-- גלריה  -->
+
+
+    <section class="box_gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="card_gallery">
+                        <div class="imgbx">
+                            <img src="images/img1.jpg">
+                        </div>
+                        <div class="details">
+                            <h2> British Columbia <span>Tofino</span> </h2>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card_gallery">
+                        <div class="imgbx">
+                            <img src="images/img4.png">
+                        </div>
+                        <div class="details">
+                            <h2> Spirit Bear <span>Lake</span> </h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card_gallery">
+                        <div class="imgbx">
+                            <img
+                                src="images/meta.jpg">
+                        </div>
+                        <div class="details">
+                            <h2> Canadian Whale <span>Watching</span> </h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card_gallery">
+                        <div class="imgbx">
+                            <img src="images/img3.png">
+                        </div>
+                        <div class="details">
+                            <h2> Churchill <span>Manitoba</span> </h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card_gallery">
+                        <div class="imgbx">
+                            <img src="images/a1111.jpg">
+                        </div>
+                        <div class="details">
+                            <h2> Road Trips <span>caravan </span> </h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="card_gallery">
+                        <div class="imgbx">
+                            <img src="images/img2.png">
+                        </div>
+                        <div class="details">
+                            <h2> Grand Manan <span>Island</span> </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
     
