--- a/index.html
+++ b/index.html
@@ -285,5 +285,82 @@
 
     </section>
 
+    <!-- כותרת  -->
+
+    <section class="travel-blog">
+        <div class="title-style text-center">
+            <h1>
+                Customer Reviews </h1>
+        </div>
+    </section>
+
+
+    <!-- תגובות לקוחות   -->
+    <section class="Comments">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-12 Customer_margin">
+                    <div class="Customer">
+                        <img src="images/user2.jpg" class="user">
+                        <div class="star_comm">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-empty"></i>
+                        </div>
+                        <p>Wonderful experience. Very passenger safety orientated. iven your poncho and que ride out to
+                            the Falls.</p>
+                        <h3>Mariana Gallegos </h3>
+                        <h5> Wed Jan 08, 2020 at 09.31 AM</h5>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <div class="Customer">
+                        <div class="star_comm">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <img src="images/user3.jpg" class="user">
+                        <p>Organized . Aside from having fun during the trip, safety and being healthy are the tour
+                            guides top priorities.</p>
+                        <h3>Bikash Kerry </h3>
+                        <h5> Tue Jan 07, 2020 at 12.27 AM</h5>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <div class="Customer">
+                        <div class="star_comm">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-o"></i>
+                        </div>
+                        <img src="images/user4.jpg" class="user">
+                        <p>Great day trip out of Van. Good for people with no form of transport or have limited
+                            mobility.</p>
+                        <h3>Aries weng </h3>
+                        <h5> Wed Dec 18, 2019 at 12.31 AM</h5>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <div class="Customer">
+                        <div class="star_comm">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-empty"></i>
+                        </div>
+                        <img src="images/user1.jpg" class="user">
+                        <p>I liked everything about my trip was a great experience, Vicky was the best tour guide..</p>
+                        <h3>Priyanka Shah </h3>
+                        <h5> Mon Nov 11, 2019 at 07.30 PM</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 
     
