--- a/index.html
+++ b/index.html
@@ -363,4 +363,37 @@
     </section>
     
 
+    <!-- סיומת האתר  -->
+
+    <footer class="footer">
+
+        <div class="footer-right">
+
+            <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+            <a class="instagram" href="#"><i class="fa fa-instagram"></i></a>
+            <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
+
+        </div>
+
+        <div class="footer-left">
+
+            <p class="footer-links">
+                <a class="link-1" href="#">Home</a>
+                <a href="#">About</a>
+
+                <a href="#">Blog</a>
+
+                <a href="#">Bookings</a>
+
+                <a href="#">tours</a>
+
+                <a href="#">Contact</a>
+            </p>
+        </div>
+    </footer>
+</body>
+
+</html>
+
     
